--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   google_fonts: 4.0.5
   video_player: ^2.3.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_lints: ^3.0.0
