--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,17 +29,28 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bordered_text: ^2.0.0
+  cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
+  dio: ^5.7.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.0.0
+  freezed_annotation: ^2.4.1
+  get_it: ^7.2.0
   google_fonts: 4.0.5
+  injectable: ^1.5.3
+  json_annotation: ^4.9.0
+  json_serializable: ^6.8.0
   video_player: ^2.3.0
-  cached_network_image: ^3.2.3
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.4.0
+  injectable_generator: ^1.5.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
