--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   injectable: ^1.5.3
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
+  share_plus: ^10.1.4
   video_player: ^2.3.0
 
 dev_dependencies:
