--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^7.2.0
   google_fonts: 4.0.5
   injectable: ^1.5.3
+  intl: ^0.20.2
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
   share_plus: ^10.1.4
